--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: growth_auth0
 description: Growth auth0 flutter plugin
-version: 1.0.0
+version: 1.0.1
 homepage:
 
 publish_to: none
@@ -22,7 +22,7 @@ dependencies:
 #    path: ../growth_web
     git:
       url: https://github.com/growthpet/growth_web.git
-      ref: master
+      ref: 1.0.0
 
 dev_dependencies:
   flutter_test:
