--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,8 @@ dependencies:
   js: ^0.6.5
   flutter_secure_storage: ^8.0.0
 
+  auth0_flutter: ^1.2.1
+  
   growth_web:
     git:
       url: https://github.com/growthpet/growth_web.git
